style/images.css
.module-image {
    width:              10vw;
    height:             10vw;
}

.modules-images-list {
}

.image {
    margin-top:         16px;
    z-index:            1;
    width:              50%;
    height:             50%;
    transition:         all 0.5s ease-in-out;
}

#app-picture{
    transition:         all 0.5s ease-in-out;
}

.module-image-background {
    display:            inline-block;
    margin:             24px;
    margin-top:         -1%;
    margin-bottom:      -1%;
    padding:            5%;
    border-radius:      50%;
    background-color:   #448866;
    z-index:            3;
    /* Required by Animations */
    transition: all 0.5s ease-in-out;
}

.team-photo-container {
    padding: 32px;
    display: flex;
    flex-direction: column;
}

.team-photo {
    padding: 24px;
}

